--- a/EMD/Views/EMDs/Create.cshtml
+++ b/EMD/Views/EMDs/Create.cshtml
@@ -131,7 +131,7 @@
                             <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.STDatCoc" class="form-control" />
+                            <input asp-for="EMDTbl.STDatCoc" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.STDatCoc" class="text-danger"></span>
                         </div>
                         
@@ -171,7 +171,7 @@
                             <label asp-for="EMDTbl.TienXuatVe" class="control-label"></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.TienXuatVe" class="form-control" />
+                            <input asp-for="EMDTbl.TienXuatVe" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.TienXuatVe" class="text-danger"></span>
                         </div>
                         
@@ -180,7 +180,7 @@
                             <label asp-for="EMDTbl.TienPhat" class="control-label"></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.TienPhat" class="form-control" />
+                            <input asp-for="EMDTbl.TienPhat" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.TienPhat" class="text-danger"></span>
                         </div>
                         
