--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -135,7 +135,7 @@
                             <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.STDatCoc" asp-format="{0:0,0}" class="form-control" />
+                            <input asp-for="EMDTbl.STDatCoc" asp-format="{0:0,0}" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.STDatCoc" class="text-danger"></span>
                         </div>
 
@@ -172,10 +172,10 @@
 
                     <div class="form-group row">
                         <div class="col-2">
-                            <label asp-for="EMDTbl.TienXuatVe" class="control-label"></label>
+                            <label asp-for="EMDTbl.TienXuatVe" class="control-label "></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.TienXuatVe" class="form-control" />
+                            <input asp-for="EMDTbl.TienXuatVe" asp-format="{0:0,0}" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.TienXuatVe" class="text-danger"></span>
                         </div>
 
@@ -184,7 +184,7 @@
                             <label asp-for="EMDTbl.TienPhat" class="control-label"></label>
                         </div>
                         <div class="col-4">
-                            <input asp-for="EMDTbl.TienPhat" class="form-control" />
+                            <input asp-for="EMDTbl.TienPhat" asp-format="{0:0,0}" class="form-control numbers" />
                             <span asp-validation-for="EMDTbl.TienPhat" class="text-danger"></span>
                         </div>
 
