--- a/EMD/Views/Shared/_Layout.cshtml
+++ b/EMD/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
 ﻿
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -12,6 +13,8 @@
     <link href="~/lib/fontawesome-free-5.10.2-web/css/all.min.css" rel="stylesheet" />
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    <!-- icheck bootstrap -->
+    @*<link href="~/lib/plugins/icheck-bootstrap/icheck-bootstrap.min.css" rel="stylesheet" />*@
     <!-- overlayScrollbars -->
     <link href="~/lib/plugins/datatables-bs4/css/dataTables.bootstrap4.css" rel="stylesheet" />
     <link href="~/lib/plugins/select2/css/select2.min.css" rel="stylesheet" />
@@ -29,32 +32,7 @@
 
         <nav class="main-header navbar navbar-expand navbar-dark navbar-gray-dark">
 
-            <!-- Left navbar links -->
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="~/lib/index3.html" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item d-none d-sm-inline-block">
-                    <a href="#" class="nav-link">Contact</a>
-                </li>
-            </ul>
-
-            <!-- SEARCH FORM -->
-            @*<form class="form-inline ml-3">
-                <div class="input-group input-group-sm">
-                    <input class="form-control form-control-navbar" type="search" placeholder="Search" aria-label="Search">
-                    <div class="input-group-append">
-                        <button class="btn btn-navbar" type="submit">
-                            <i class="fas fa-search"></i>
-                        </button>
-                    </div>
-                </div>
-            </form>*@
-
-            <!-- Right navbar links -->
+            
             <partial name="_LoginPartial.cshtml" />
 
 
@@ -67,6 +45,14 @@
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
+
+            @if (TempData["AlertMessage"] != null)
+            {
+                <div id="AlertBox" class="alert @TempData["AlertType"] hide">
+                    @TempData["AlertMessage"]
+                </div>
+            }
+
             @RenderBody()
         </div>
         <!-- /.content-wrapper -->
@@ -89,6 +75,8 @@
     <!-- jQuery -->
     <script src="~/lib/plugins/jquery/jquery.min.js"></script>
     <script src="~/lib/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
     <script src="~/lib/jquery/jquery.maskedinput.min.js"></script>
     <script src="~/lib/bootbox/src/bootbox.js"></script>
@@ -105,6 +93,10 @@
     <script>
         $(function () {
             $(".maskInput").mask("99/99/9999");
+
+            $('#AlertBox').removeClass('hide');
+            $('#AlertBox').delay(1000).slideUp(1000);
+
         });
 
     </script>
