--- a/EMD/Views/Shared/_LoginPartial.cshtml
+++ b/EMD/Views/Shared/_LoginPartial.cshtml
@@ -1,15 +1,19 @@
-﻿
+﻿@using Microsoft.AspNetCore.Http
+@using EMD.Extensions
+@using EMD.Utilities
+@inject IHttpContextAccessor HttpContextAccessor
+
 <ul class="navbar-nav ml-auto">
 
     <li class="nav-item dropdown">
 
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            <i class="fas fa-user">Welcome!</i>
+            <i class="fas fa-user">Welcome - @(HttpContextAccessor.HttpContext.Session.Get<User>("ssUser").Username)!</i>
         </a>
 
         <div class="dropdown-menu dropdown-menu-right " aria-labelledby="navbarDropdownMenuLink">
             <div class="container">
-                <a asp-controller="login" asp-action="changepass" class="dropdown-item">Change pass</a>
+                <a asp-controller="login" asp-action="changepass" asp-route-strUrl="@Url.RouteUrl(ViewContext.RouteData.Values)" class="dropdown-item">Change pass</a>
                 <a asp-controller="login" asp-action="logout" class="dropdown-item">Logout</a>
 
             </div>
