--- a/EMD/Views/Shared/_Layout.cshtml
+++ b/EMD/Views/Shared/_Layout.cshtml
@@ -31,8 +31,18 @@
         <!-- Navbar -->
 
         <nav class="main-header navbar navbar-expand navbar-dark navbar-gray-dark">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" data-widget="pushmenu" href="#"><i class="fas fa-bars"></i></a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="../../index3.html" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item d-none d-sm-inline-block">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
+            </ul>
 
-            
             <partial name="_LoginPartial.cshtml" />
 
 
