--- a/EMD/wwwroot/css/site.css
+++ b/EMD/wwwroot/css/site.css
@@ -1,14 +1,21 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
-a.navbar-brand {
+
+/*.tblAsean .cursor-pointer:hover {
+    background-color: #3E5C9A;
+    cursor: pointer;
+}*/
+
+
+/*a.navbar-brand {
   white-space: normal;
   text-align: center;
   word-break: break-all;
 }
 
 /* Provide sufficient contrast against white background */
-a {
+/*a {
   color: #0366d6;
 }
 
@@ -25,7 +32,7 @@ a {
 }
 
 /* Sticky footer styles
--------------------------------------------------- */
+-------------------------------------------------- 
 html {
   font-size: 14px;
 }
@@ -51,15 +58,15 @@ button.accept-policy {
   line-height: inherit;
 }
 
-/* Sticky footer styles
--------------------------------------------------- */
+Sticky footer styles
+--------------------------------------------------
 html {
   position: relative;
   min-height: 100%;
 }
 
 body {
-  /* Margin bottom by footer height */
+   Margin bottom by footer height 
   margin-bottom: 60px;
 }
 .footer {
@@ -67,5 +74,5 @@ body {
   bottom: 0;
   width: 100%;
   white-space: nowrap;
-  line-height: 60px; /* Vertically center the text there */
-}
+  line-height: 60px;  Vertically center the text there 
+}*/
