--- a/EMD/Views/Login/login.cshtml
+++ b/EMD/Views/Login/login.cshtml
@@ -41,7 +41,7 @@
 
                     <div asp-validation-summary="All" class="text-danger"></div>
                     <div class="input-group mb-3">
-                        <input asp-for="username" class="form-control" placeholder="Username">
+                        <input asp-for="username" class="form-control" placeholder="Username" autofocus>
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
