--- a/EMD/Views/Users/Create.cshtml
+++ b/EMD/Views/Users/Create.cshtml
@@ -54,8 +54,8 @@
                             <label asp-for="User.Username"></label>
                         </div>
                         <div class="col-4">
-                            <input class="form-control" asp-for="User.Username" />
-                            <span class="text-danger" asp-validation-for="User.Username"></span>
+                            <input class="form-control" asp-for="UsernameCreate" />
+                            <span class="text-danger" asp-validation-for="UsernameCreate"></span>
                         </div>
                         
 
