--- a/EMD/Views/Shared/_TheoNgayDC.cshtml
+++ b/EMD/Views/Shared/_TheoNgayDC.cshtml
@@ -1,16 +1,16 @@
 ﻿
-<div class="modal fade" id="theoNgayBayModal" style="display: none;" aria-hidden="true">
+<div class="modal fade" id="theoNgayDCModal" style="display: none;" aria-hidden="true">
     <div class="modal-dialog modal-lg">
         <div class="modal-content bg-secondary">
             <div class="modal-header">
-                <h4 class="modal-title">Báo cáo theo ngày bay</h4>
+                <h4 class="modal-title">Báo cáo theo ngày đặt cọc</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">×</span>
                 </button>
             </div>
             <div class="modal-body">
 
-                <form id="frmTheoNgayBay" asp-action="TheoNgayBay" asp-controller="ThongKes" method="post" autocomplete="off">
+                <form id="frmTheoNgayDC" asp-action="TheoNgayDC" asp-controller="ThongKes" method="post" autocomplete="off">
 
                     <div class="form-group row">
                         <div class="col-2">
