--- a/EMD/Views/EMDs/DetailById.cshtml
+++ b/EMD/Views/EMDs/DetailById.cshtml
@@ -1,12 +1,7 @@
 ﻿@model EMDViewModel
-@using Microsoft.AspNetCore.Http
-@using EMD.Utilities
-@inject IHttpContextAccessor HttpContextAccessor
 
 @{
-    ViewData["Title"] = "Create";
-
-    var userName = HttpContextAccessor.HttpContext.Session.Get<User>("ssUser").Username;
+    Layout = null;
 }
 
 <!-- Content Header (Page header) -->
@@ -14,15 +9,15 @@
     <div class="container-fluid">
         <div class="row mb-2">
             <div class="col-sm-6">
-                <h1>Thêm Mới</h1>
+                <h1>Xem Chi Tiết</h1>
             </div>
-            <div class="col-sm-6">
+            @*<div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
                     <li class="breadcrumb-item"><a asp-action="Index">Danh Sách Đặt Cọc</a></li>
-                    <li class="breadcrumb-item active">Thêm Mới Đặt Cọc</li>
+                    <li class="breadcrumb-item active">Xem Chi Tiết Đặt Cọc</li>
                 </ol>
-            </div>
+            </div>*@
         </div>
     </div><!-- /.container-fluid -->
 </section>
@@ -33,7 +28,7 @@
     <!-- Default box -->
     <div class="card">
         <div class="card-header">
-            <h3 class="card-title"><i class="fas fa-file text-info"></i> Thêm Mới Đặt Cọc</h3>
+            <h3 class="card-title"><i class="fas fa-file text-info"></i> Xem Chi Tiết Đặt Cọc</h3>
 
             <div class="card-tools">
                 <button type="button" class="btn btn-tool" data-card-widget="collapse" data-toggle="tooltip" title="Collapse">
@@ -49,15 +44,14 @@
 
             <form method="post" autocomplete="off">
                 <div class="p-4 border rounded">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="form-group row">
                         <div class="col-1">
                             <label asp-for="EMDTbl.SGTCode" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.SGTCode" class="form-control" id="txtSgtCode" />
-                            <span asp-validation-for="EMDTbl.SGTCode" class="text-danger"></span>
+                            <input asp-for="EMDTbl.SGTCode" class="form-control" readonly />
+
                         </div>
 
 
@@ -65,26 +59,32 @@
                             <label asp-for="EMDTbl.BatDau" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.BatDau" class="form-control datepicker maskInput" id="txtBatDau" />
-                            <span asp-validation-for="EMDTbl.BatDau" class="text-danger"></span>
+                            <input type="text" asp-for="EMDTbl.BatDau" class="form-control maskInput" disabled />
                         </div>
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.KetThuc" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.KetThuc" class="form-control datepicker maskInput" id="txtKetThuc" />
-                            <span asp-validation-for="EMDTbl.KetThuc" class="text-danger"></span>
+                            <input type="text" asp-for="EMDTbl.KetThuc" class="form-control maskInput" readonly />
                         </div>
+
                     </div>
 
                     <div class="form-group row">
+
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.SLVeDatCoc" class="form-control" readonly />
+                        </div>
+
                         <div class="col-1">
                             <label asp-for="EMDTbl.NgayDC" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.NgayDC" class="form-control datepicker maskInput" />
-                            <span asp-validation-for="EMDTbl.NgayDC" class="text-danger"></span>
+                            <input type="text" asp-for="EMDTbl.NgayDC" class="form-control maskInput" readonly />
                         </div>
 
 
@@ -92,17 +92,10 @@
                             <label asp-for="EMDTbl.HetHan" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.HetHan" class="form-control datepicker maskInput" />
-                            <span asp-validation-for="EMDTbl.HetHan" class="text-danger"></span>
+                            <input type="text" asp-for="EMDTbl.HetHan" class="form-control maskInput" readonly />
+
                         </div>
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.SLVeDatCoc" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.SLVeDatCoc" class="form-control" id="txtSLVeDatCoc" />
-                            <span asp-validation-for="EMDTbl.SLVeDatCoc" class="text-danger"></span>
-                        </div>
 
                     </div>
 
@@ -111,8 +104,8 @@
                             <label asp-for="EMDTbl.Number" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.Number" class="form-control" />
-                            <span asp-validation-for="EMDTbl.Number" class="text-danger"></span>
+                            <input asp-for="EMDTbl.Number" class="form-control" readonly />
+
                         </div>
 
 
@@ -120,16 +113,16 @@
                             <label asp-for="EMDTbl.HangHK" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.HangHK" class="form-control" />
-                            <span asp-validation-for="EMDTbl.HangHK" class="text-danger"></span>
+                            <input asp-for="EMDTbl.HangHK" class="form-control" readonly />
+
                         </div>
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.STDatCoc" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.STDatCoc" class="form-control numbers" />
-                            <span asp-validation-for="EMDTbl.STDatCoc" class="text-danger"></span>
+                            <input asp-for="EMDTbl.STDatCoc" asp-format="{0:0,0}" class="form-control" readonly />
+
                         </div>
 
                     </div>
@@ -137,21 +130,20 @@
                     <div class="form-group row">
 
 
-
                         <div class="col-1">
                             <label asp-for="EMDTbl.HoanCoc" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.HoanCoc" class="form-control datepicker maskInput" />
-                            <span asp-validation-for="EMDTbl.HoanCoc" class="text-danger"></span>
+                            <input type="text" asp-for="EMDTbl.HoanCoc" class="form-control " readonly />
+
                         </div>
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.LoaiBK" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.LoaiBK" class="form-control" />
-                            <span asp-validation-for="EMDTbl.LoaiBK" class="text-danger"></span>
+                            <input asp-for="EMDTbl.LoaiBK" class="form-control" readonly />
+
                         </div>
 
 
@@ -159,8 +151,8 @@
                             <label asp-for="EMDTbl.SLVeDaXuat" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.SLVeDaXuat" class="form-control" id="txtSLVeDaXuat" />
-                            <span asp-validation-for="EMDTbl.SLVeDaXuat" class="text-danger"></span>
+                            <input asp-for="EMDTbl.SLVeDaXuat" class="form-control" readonly />
+
                         </div>
 
                     </div>
@@ -170,8 +162,8 @@
                             <label asp-for="EMDTbl.TienXuatVe" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.TienXuatVe" class="form-control numbers" />
-                            <span asp-validation-for="EMDTbl.TienXuatVe" class="text-danger"></span>
+                            <input asp-for="EMDTbl.TienXuatVe" class="form-control" readonly />
+
                         </div>
 
 
@@ -179,16 +171,16 @@
                             <label asp-for="EMDTbl.TienPhat" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.TienPhat" class="form-control numbers" />
-                            <span asp-validation-for="EMDTbl.TienPhat" class="text-danger"></span>
+                            <input asp-for="EMDTbl.TienPhat" class="form-control" readonly />
+
                         </div>
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.NgayPhat" class="control-label "></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.NgayPhat" class="form-control datepicker maskInput" />
-                            <span asp-validation-for="EMDTbl.NgayPhat" class="text-danger"></span>
+                            <input type="text" value="" asp-for="EMDTbl.NgayPhat" class="form-control maskInput" readonly />
+
                         </div>
 
                     </div>
@@ -196,11 +188,19 @@
                     <div class="form-group row">
 
                         <div class="col-1">
+                            <label asp-for="EMDTbl.SoCTPhat" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.SoCTPhat" class="form-control" readonly />
+
+                        </div>
+
+                        <div class="col-1">
                             <label asp-for="EMDTbl.LoaiTien" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.LoaiTien" class="form-control" />
-                            <span asp-validation-for="EMDTbl.LoaiTien" class="text-danger"></span>
+                            <input asp-for="EMDTbl.LoaiTien" class="form-control" readonly />
+
                         </div>
 
 
@@ -208,16 +208,8 @@
                             <label asp-for="EMDTbl.TyGia" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.TyGia" class="form-control" />
-                            <span asp-validation-for="EMDTbl.TyGia" class="text-danger"></span>
-                        </div>
+                            <input asp-for="EMDTbl.TyGia" class="form-control" readonly />
 
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.SoCTPhat" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.SoCTPhat" class="form-control" />
-                            <span asp-validation-for="EMDTbl.SoCTPhat" class="text-danger"></span>
                         </div>
 
                     </div>
@@ -227,8 +219,8 @@
                             <label asp-for="EMDTbl.GhiChu" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <textarea asp-for="EMDTbl.GhiChu" class="form-control"></textarea>
-                            <span asp-validation-for="EMDTbl.GhiChu" class="text-danger"></span>
+                            <textarea asp-for="EMDTbl.GhiChu" class="form-control" readonly></textarea>
+
                         </div>
 
 
@@ -236,50 +228,47 @@
                             <label asp-for="EMDTbl.DongHoSo" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input type="text" value="" asp-for="EMDTbl.DongHoSo" class="form-control datepicker maskInput" />
-                            <span asp-validation-for="EMDTbl.DongHoSo" class="text-danger"></span>
+                            <input type="text" value="" asp-for="EMDTbl.DongHoSo" class="form-control" readonly />
+
                         </div>
 
 
+                        <div class="col-1">
+                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
+                        </div>
+                        <div class="col-3">
+                            <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly />
+
+                        </div>
+
+                    </div>
+
+                    <div class="form-group row">                        
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.PNR" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.PNR" class="form-control" />
-                            <span asp-validation-for="EMDTbl.PNR" class="text-danger"></span>
+                            <input asp-for="EMDTbl.PNR" class="form-control" readonly />
+
                         </div>
 
                     </div>
 
                     <div class="form-group row">
-                        <div class="col-1">
-                            <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
-                        </div>
-                        <div class="col-3">
-                            <input asp-for="EMDTbl.NguoiNhap" value="@userName" class="form-control" readonly />
-                            <span asp-validation-for="EMDTbl.NguoiNhap" class="text-danger"></span>
-                        </div>
-
-                    </div>
-
-                    <div class="form-group row">
-
-
-
                         <div class="col-1">
                             <label asp-for="EMDTbl.DienGiai" class="control-label"></label>
                         </div>
                         <div class="col-11">
-                            <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="10" id="txtDienGiai"></textarea>
-                            <span asp-validation-for="EMDTbl.DienGiai" class="text-danger"></span>
+                            <textarea asp-for="EMDTbl.DienGiai" class="form-control" rows="10" readonly></textarea>
+
                         </div>
 
                     </div>
 
 
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary"><i class="fas fa-save"></i></button>
+                        <a asp-action="Edit" asp-route-id="@Model.EMDTbl.Id" class="btn btn-primary"><i class="fas fa-edit"></i></a>
                         <a class="btn btn-success" asp-action="Index"><i class="fas fa-backward"></i></a>
                     </div>
                 </div>
@@ -295,15 +284,3 @@
 
 </section>
 <!-- /.content -->
-
-@section Scripts{
-    @*<script>
-
-        $(function () {
-            $(".datepicker").datepicker({
-                dateFormat: 'dd/mm/yy'
-            });
-        });
-    </script>*@
-    <script src="~/js/Admin/EMD/createController.js"></script>
-}
