--- a/EMD/Views/Shared/_Layout.cshtml
+++ b/EMD/Views/Shared/_Layout.cshtml
@@ -90,6 +90,7 @@
 
     <script src="~/lib/jquery/jquery.maskedinput.min.js"></script>
     <script src="~/lib/bootbox/src/bootbox.js"></script>
+    <script src="~/lib/numeral.js/numeral.min.js"></script>
     <!-- Bootstrap 4 -->
     <script src="~/lib/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/plugins/select2/js/select2.full.min.js"></script>
