--- a/EMD/Views/EMDs/Edit.cshtml
+++ b/EMD/Views/EMDs/Edit.cshtml
@@ -1,4 +1,5 @@
 ﻿@model EMDViewModel
+@using EMD.Extensions
 
 @{
     ViewData["Title"] = "Edit";
@@ -121,7 +122,8 @@
                             <label asp-for="EMDTbl.HangHK" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.HangHK" class="form-control" />
+                            @*<input asp-for="EMDTbl.HangHK" class="form-control" />*@
+                            <select class="form-control" asp-for="EMDTbl.HangHK" asp-items="@Model.HangHKs.ToSelectListItemString(Model.EMDTbl.HangHK)"></select>
                             <span asp-validation-for="EMDTbl.HangHK" class="text-danger"></span>
                         </div>
 
@@ -243,13 +245,13 @@
                             <label asp-for="EMDTbl.NguoiNhap" class="control-label"></label>
                         </div>
                         <div class="col-3">
-                            <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly/>
+                            <input asp-for="EMDTbl.NguoiNhap" class="form-control" readonly />
                             <span asp-validation-for="EMDTbl.NguoiNhap" class="text-danger"></span>
                         </div>
 
                     </div>
 
-                    <div class="form-group row">                       
+                    <div class="form-group row">
 
                         <div class="col-1">
                             <label asp-for="EMDTbl.PNR" class="control-label"></label>
